removed test dependency to jaxb to work with Java 9